# app

./: .all-contributorsrc  .gitignore  AGENTS.md  README.md  cli.py  gitmastery.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: bump-version-beta.yml  bump-version.yml  codeql.yml  dummy.yml  publish-beta.yml  publish.yml  publish_linux.yml  publish_macos.yml  publish_windows.yml  test-bump-version.yml  test-pr.yml  test.yml
app/: aliases.py  cli.py  exercise_config.py  gitmastery_config.py
app/commands/: __init__.py  check.py  download.py  instructions.py  progress.py  repl.py  setup.py  setup_folder.py  update.py  verify.py  version.py
app/configs/: configs.py  exercise_config.py  gitmastery_config.py
app/hooks/: __init__.py  in_exercise_root.py  in_gitmastery_root.py  utils.py
app/logging/: setup_logging.py
app/utils/: cli.py  click.py  click_utils.py  command.py  command_utils.py  exercises.py  general.py  gh_cli.py  gh_cli_utils.py  git.py  git_cli.py  git_cli_utils.py  github_cli.py  gitmastery.py  gitmastery_utils.py  version.py
cli/: cli.py
cli/commands/: __init__.py  check.py  download.py  instructions.py  progress.py  setup.py  verify.py
cli/utils/: cli_utils.py  gh_cli_utils.py  git_cli_utils.py  gitmastery_utils.py
docs/: Gemfile  _config.yml  index.markdown  linux.markdown  macos.markdown  update.markdown  windows-git-bash.markdown  windows-wsl.markdown
docs/_posts/: 2025-07-11-welcome-to-jekyll.markdown
scripts/: build_test_e2e.sh
tests/bats/: README.md  test_cli.bats
tests/click-testing/: README.md  (+1 more)
(+26 files in other folders)
