[project]
name = "gitmastery"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "click==8.3.1",
    "difflib-parser==2.1.1",
    "git-autograder==6.6.0",
    "GitPython==3.1.46",
    "librt==0.8.1",
    "Pygments==2.19.2",
    "PyTermGUI==7.7.4",
    "pytz==2026.1.post1",
    "PyYAML==6.0.3",
    "repo-smith==2.6.1",
    "requests==2.32.5",
    "typing_extensions==4.15.0",
    "wcwidth==0.6.0",
]

[dependency-groups]
dev = [
    "lefthook==2.1.4",
    "mypy==1.19.1",
    "mypy_extensions==1.1.0",
    "pyinstaller==6.19.0",
    "pyinstaller-hooks-contrib==2026.3",
    "pytest==9.0.2",
    "pytest-order==1.3.0",
    "ruff==0.14.10",
    "setuptools==82.0.1",
    "types-pytz==2026.1.1.20260304",
    "types-PyYAML==6.0.12.20250915",
    "types-requests==2.32.4.20260107",
]

[tool.uv]
package = false
